--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
 </head>
 <body>
 <form class="wrapper">
-    Имя<br><input type="text" name="name" class="check">
-    <div class="message">lol</div>
-    <br>
 
+    Имя<br><input type="text" name="name" class="check"><br>
 
     Телефон<br><input type="text" name="phone" class="check"><br>
-    <div class="message"></div>
 
     Почта<br><input type="text" name="email" class="check"><br>
-    <div class="message"></div>
 
     <input type="submit" value="Отправить" class="button">
 </form>
